新增网关，mybatis，swagger模块

--- a/spring-cloud-oauth2/pom.xml
+++ b/spring-cloud-oauth2/pom.xml
@@ -18,10 +18,18 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.shiyi.springcloud</groupId>
+            <artifactId>block-swagger</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -31,12 +39,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-        </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
