--- a/spring-cloud-consumer/pom.xml
+++ b/spring-cloud-consumer/pom.xml
@@ -54,8 +54,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-
-
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version>
+        </dependency>
 
     </dependencies>
 
