--- a/spring-cloud-order/src/main/resources/application.properties
+++ b/spring-cloud-order/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8070
-spring.application.name=springcloudorder
+spring.application.name=spring-cloud-order
 
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
