--- a/spring-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/spring-cloud-gateway/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
-#######优于application加载#######
 
+####    优于application加载    ####
 spring:
   application:
     name: spring-cloud-gateway
@@ -14,7 +14,7 @@ spring:
           '[/**]':
             allowedOrigins: "*"
             allowedMethods: "*"
-     # enabled: true
+      #enabled: true
         # @link:https://docs.spring.io/spring-cloud-gateway/docs/current/reference/html/#the-loadbalancerclient-filter
         # 当service实例不存在时默认返回503，显示配置返回404
       loadbalancer:
@@ -22,15 +22,14 @@ spring:
         # 根据注册中心自动配置routes
         # @link :https://docs.spring.io/spring-cloud-gateway/docs/current/reference/html/#the-discoveryclient-route-definition-locator
         # 效果：/serviceId/path1/args ==> /path1/args
-      #discovery:
-       # locator:
-        # lower-case-service-id: true
-        # enabled: true
+      discovery:
+        locator:
+         lower-case-service-id: true
+         enabled: true
       routes:
           # 系统模块
         - id: spring-cloud-order
           uri: lb://spring-cloud-order
-          #uri: http://localhost:8070
           predicates:
            - Path=/spring-cloud-order/**
           filters:
@@ -50,6 +49,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+####    暴露端点   ####
 management:
   endpoint:
     gateway:
@@ -58,6 +58,10 @@ management:
     web:
       exposure:
         include: '*'
+
+####    服务端口    ####
 server:
   port: 9527
+
+
 
