--- a/spring-cloud-commons/pom.xml
+++ b/spring-cloud-commons/pom.xml
@@ -7,6 +7,7 @@
         <module>block-swagger</module>
         <module>block-test</module>
         <module>block-mybatisplus</module>
+        <module>block-security</module>
     </modules>
     <!-- <parent>
          <groupId>org.springframework.boot</groupId>
