修改少量细节

--- a/spring-cloud-gateway/src/main/resources/bootstrap.yml
+++ b/spring-cloud-gateway/src/main/resources/bootstrap.yml
@@ -62,5 +62,11 @@ management:
 server:
   port: 9527
 
+####    swagger    ####
+swagger:
+  basic:
+    enabled: true
+    username: zhangsan
+    password: 123
 
 
